# ChangeLog for media-plugins/mythdvd
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythdvd/ChangeLog,v 1.46 2007/08/29 15:38:20 cardoe Exp $

  29 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  mythdvd-0.20.2_p14282.ebuild:
  stable 0.20.2 for Schedules Direct support needed by Sept 1

*mythdvd-0.20.2_p14282 (24 Aug 2007)

  24 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  +mythdvd-0.20.2_p14282.ebuild:
  bump to 0.20.2

*mythdvd-0.20.1_p14146 (07 Aug 2007)

  07 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  +mythdvd-0.20.1_p14146.ebuild:
  upstream fixes. new subversion builds.

  28 Jun 2007; Doug Goldstein <cardoe@gentoo.org>
  -mythdvd-0.20_p11329.ebuild, -mythdvd-0.21_pre13285.ebuild:
  mythdvd is gone, merged into mythvideo. remove old stable

  12 Jun 2007; Doug Goldstein <cardoe@gentoo.org> mythdvd-0.20.1.ebuild:
  Stable amd64, pcc, x86

*mythdvd-0.20.1 (26 Apr 2007)

  26 Apr 2007; Doug Goldstein <cardoe@gentoo.org> +mythdvd-0.20.1.ebuild,
  mythdvd-0.21_pre13285.ebuild:
  bump to 0.20.1 release

*mythdvd-0.21_pre13285 (20 Apr 2007)

  20 Apr 2007; Doug Goldstein <cardoe@gentoo.org>
  +mythdvd-0.21_pre13285.ebuild:
  Adding experimental trunk ebuild

  20 Apr 2007; Doug Goldstein <cardoe@gentoo.org> -mythdvd-0.19.ebuild:
  remove old version

  19 Mar 2007; Marius Mauch <genone@gentoo.org> mythdvd-0.19.ebuild,
  mythdvd-0.20_p11329.ebuild:
  Replacing einfo with elog

  24 Dec 2006; Doug Goldstein <cardoe@gentoo.org> -mythdvd-0.20.ebuild,
  mythdvd-0.20_p11329.ebuild:
  Stabling for amd64, ppc, and x86

  07 Nov 2006; Steve Dibb <beandog@gentoo.org> mythdvd-0.19.ebuild,
  mythdvd-0.20.ebuild, mythdvd-0.20_p11329.ebuild:
  Remove hard deps on xine/mplayer, add vcd USE flag

  29 Sep 2006; Doug Goldstein <cardoe@gentoo.org> files/mtd.init:
  Fixed init script

*mythdvd-0.20_p11329 (29 Sep 2006)

  29 Sep 2006; Doug Goldstein <cardoe@gentoo.org>
  +mythdvd-0.20_p11329.ebuild: