@@ -14,14 +14,14 @@ EBUILD mythdvd-0.20.1_p14146.ebuild 805 RMD160 e7f152a4c0527030a06eb32338dd976c1
 MD5 1b0f1b6b644c993c36469d17affdd132 mythdvd-0.20.1_p14146.ebuild 805
 RMD160 e7f152a4c0527030a06eb32338dd976c16bb295b mythdvd-0.20.1_p14146.ebuild 805
 SHA256 bff9351a5068beaefae1f55b1c3ee85b3fcaf3c9c125dcdc8eaf9ece3378ec51 mythdvd-0.20.1_p14146.ebuild 805
-EBUILD mythdvd-0.20.2_p14282.ebuild 802 RMD160 b2b251b4aeb2584bacf142cad756115cb436129a SHA1 0c38d39f20b736947c513234e80fa255c871b990 SHA256 8190fc3452de1a5a0b3a819cd55ac67b4ac0066f3ebfbd27188f967dfe5b57c7
-MD5 137cba9871eaec1d69d871a195eb2fe3 mythdvd-0.20.2_p14282.ebuild 802
-RMD160 b2b251b4aeb2584bacf142cad756115cb436129a mythdvd-0.20.2_p14282.ebuild 802
-SHA256 8190fc3452de1a5a0b3a819cd55ac67b4ac0066f3ebfbd27188f967dfe5b57c7 mythdvd-0.20.2_p14282.ebuild 802
-MISC ChangeLog 6165 RMD160 0650814a6b4d6028333acccbd9a6f76269d3db6f SHA1 2a790fd082a0fabc29372698dabc19f311f9a078 SHA256 995ca5f467b4a10c468051639c715d8cca535ea4442ca97e6acf09a478fe9c8a
-MD5 b503d3fbd14661c21ca899499b59ca25 ChangeLog 6165
-RMD160 0650814a6b4d6028333acccbd9a6f76269d3db6f ChangeLog 6165
-SHA256 995ca5f467b4a10c468051639c715d8cca535ea4442ca97e6acf09a478fe9c8a ChangeLog 6165
+EBUILD mythdvd-0.20.2_p14282.ebuild 818 RMD160 8f2da23a7da74193b9a3cfb89a7e953d0c1369ff SHA1 938fd15696ddd6e1994c1027c68d5f23f5dcb080 SHA256 6fc6f8313d67e9c4d793654527c5bdcb56eaf6654d7357eb53cf6d210917b947
+MD5 d147b719ca6710d2f200872d76464e36 mythdvd-0.20.2_p14282.ebuild 818
+RMD160 8f2da23a7da74193b9a3cfb89a7e953d0c1369ff mythdvd-0.20.2_p14282.ebuild 818
+SHA256 6fc6f8313d67e9c4d793654527c5bdcb56eaf6654d7357eb53cf6d210917b947 mythdvd-0.20.2_p14282.ebuild 818
+MISC ChangeLog 6281 RMD160 0ae36f6a002bbb1d759a1a1d42353a15e5261ac8 SHA1 e16250e0e94462e84bff13dc289af873da7afca8 SHA256 acbb0856edabffeb5db7d4450d0052e857b2028af50247889146cf02440ad034
+MD5 e7336c43a9ff4305ff6f99f951817978 ChangeLog 6281
+RMD160 0ae36f6a002bbb1d759a1a1d42353a15e5261ac8 ChangeLog 6281
+SHA256 acbb0856edabffeb5db7d4450d0052e857b2028af50247889146cf02440ad034 ChangeLog 6281
 MISC metadata.xml 222 RMD160 effccac2541ac4d0954899784d7d64c60a9c020e SHA1 c6bd979f236f5e6fe9332eb6568bee402efc793f SHA256 8b2065fecfbbdd0caa3c5eb86b98c22766db07f555edbf3127e9454b468ecff6
 MD5 f62db0df6ee8ee1d4fe7b9c3d74432a7 metadata.xml 222
 RMD160 effccac2541ac4d0954899784d7d64c60a9c020e metadata.xml 222
@@ -38,7 +38,7 @@ SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.6 (GNU/Linux)
 
-iD8DBQFG1ZLyoeSe8B0zEfwRAoWHAJ0Zhf4A25Ioty9OcWOT3+qQkiYQaQCeIyML
-MQ8HcuFuwFJUEEIWzTYstTM=
-=ZYiy
+iD8DBQFG1br1oeSe8B0zEfwRApPnAJ4zJL/XdfQ2gRfT1IwzYyxlyZRcxACfbZ93
+EEB0QHeTPnfcgqwIOC7+rp8=
+=LwZt
 -----END PGP SIGNATURE-----
